--- a/SnowmassStyle/CpF-T3/wgreport.tex
+++ b/SnowmassStyle/CpF-T3/wgreport.tex
@@ -389,7 +389,7 @@ deviations~\cite{Davier:2010nc}.
 A direct lattice-QCD calculation of the hadronic vacuum polarization with $\sim 1\%$ precision may help shed
 light on the apparent discrepancy between $e^{+}e^{-}$ and $\tau$ data;
 ultimately a lattice-QCD calculation of $a_{\mu}(\rm HVP)$ with sub-percent precision can circumvent these
-concerns.  The HVP contribution to the muon anomalous magnetic moment has been computed in lattice QCD by several groups~\cite{Blum:2002ii,Gockeler:2003cw,Aubin:2006xv,Feng:2011zk,Boyle:2011hu,DellaMorte:2011aa} (see also the recent talks at Lattice 2013), and statistical errors on lattice calculations of $a_{\mu}(\rm HVP)$ are currently
+concerns.  The HVP contribution to the muon anomalous magnetic moment has been computed in lattice QCD by several groups~\cite{Blum:2002ii,Gockeler:2003cw,Aubin:2006xv,Feng:2011zk,Boyle:2011hu,DellaMorte:2011aa,Burger:2013jya}, and statistical errors on lattice calculations of $a_{\mu}(\rm HVP)$ are currently
 at about the 3--5\% level, but important systematic errors remain. Anticipated increases in computing resources will enable simulations directly at the physical quark masses with large volumes, and brute-force calculations of quark-disconnected diagrams, thereby eliminating important systematic errors.
 
 Unlike the case for the HVP, the hadronic light-by-light (HLbL) contribution to the muon anomaly cannot be extracted from experiment. Present estimates of this contribution rely on models~\cite{Prades:2009tw,Nyffeler:2009tw}, and report errors estimated to be 25--40\% range.
@@ -515,9 +515,7 @@ Standard Model of particle physics. In such models the Higgs is naturally light 
 for spontaneous SUSY breaking.  Because the SUSY-breaking order parameter cannot belong to any of the supermultiplets, SUSY breaking must arise from interactions with a largely ``hidden" sector in which SUSY is spontaneously broken.   Phenomenologically, this leads to
 explicit soft breaking terms in the low-energy Lagrangian of the visible sector.  In general there are many such terms with {\it a priori} undetermined couplings (called the soft parameters), thereby resulting in a large parameter space and a lack of predictivity at low energies.  The particle spectrum of the visible sector is often assumed to be independent of the details of the hidden sector, and only affected by the mechanism for mediating the breaking.  When the hidden sector is strongly-coupled, however, predictions for the visible sector depend sensitively on the SUSY-breaking mechanism~\cite{Cohen:2006qc,Murayama:2007ge}.
 
-Dynamical SUSY breaking generated via dimensional transmutation in the hidden sector provides a natural mechanism for the large separation between the Planck scale and the expected supersymmetry breaking scale of a few TeV~\cite{Witten:1981nf}.  A simple candidate for this hidden sector is a supersymmetrized version of QCD with $N_c$ colors and $N_f$ massive flavors~\cite{Intriligator:2006dd}.  Nonperturbative lattice field theory methods can be used to study the vacuum structure and dynamics of super QCD, and ultimately to compute the values of the numerous soft parameters in the low-energy theory in terms of only a handful parameters of the hidden-sector super-QCD theory (given the mechanism for mediating SUSY breaking).  This will place important quantitative constraints on low-energy supersymmetric models (such as the MSSM) and provide essential quantitative input to realistic supersymmetric model building.
-%The key technical obstacle to studying super-QCD has been, until recently, that supersymmetry is broken by the nonzero lattice spacing when one uses the simplest lattice fermion actions.  This barrier can be overcome using a lattice-fermion action which retains an approximate or exact chiral symmetry even at nonzero lattice spacing~\cite{Curci:1986sm,Maru:1997kh,Kaplan:1999jn} \textcolor{red}{(are these the best references?)}, but at the cost of greater computational expense.  
-Recent lattice efforts have focused on super-Yang Mills with the gauge group $SU(2)$ and ${\mathcal N}=1$ supersymmetries~\cite{Giedt:2008xm,Endres:2009yp,Demmouche:2010sf}, and shown that the obtained value of the gluino condensate agrees with theoretical expectations.  Building a realistic SUSY-breaking sector capable of yielding the soft parameters of the low-scale SUSY theory, however, requires adding quarks (plus their scalar superpartners) and extending the gauge group to a larger number of colors.  The simplest super-QCD system that is expected to exhibit metastable SUSY-breaking vacua corresponds to four colors and five flavors~\cite{Intriligator:2006dd};  the simulation of such a theory with current algorithms will require petascale computing resources, and therefore is not anticipated for the near future.  Nevertheless, further numerical study of super QCD using lattice methods will help to develop the necessary software and analysis tools for future more realistic simulations, and will likely lead to valuable insights regarding dynamical SUSY breaking along the way to the more ambitious goal of computing the soft-breaking parameters from the underlying hidden-sector super-QCD Lagrangian.
+Dynamical SUSY breaking generated via dimensional transmutation in the hidden sector provides a natural mechanism for the large separation between the Planck scale and the expected supersymmetry breaking scale of a few TeV~\cite{Witten:1981nf}.  A simple candidate for this hidden sector is a supersymmetrized version of QCD with $N_c$ colors and $N_f$ massive flavors~\cite{Intriligator:2006dd}.  Nonperturbative lattice field theory methods can be used to study the vacuum structure and dynamics of super QCD, and ultimately to compute the values of the numerous soft parameters in the low-energy theory in terms of only a handful parameters of the hidden-sector super-QCD theory (given the mechanism for mediating SUSY breaking).  This will place important quantitative constraints on low-energy supersymmetric models (such as the MSSM) and provide essential quantitative input to realistic supersymmetric model building.  Recent lattice efforts have focused on super-Yang Mills with the gauge group $SU(2)$ and ${\mathcal N}=1$ supersymmetries~\cite{Giedt:2008xm,Endres:2009yp,Demmouche:2010sf}, and shown that the obtained value of the gluino condensate agrees with theoretical expectations.  Building a realistic SUSY-breaking sector capable of yielding the soft parameters of the low-scale SUSY theory, however, requires adding quarks (plus their scalar superpartners) and extending the gauge group to a larger number of colors.  The simplest super-QCD system that is expected to exhibit metastable SUSY-breaking vacua corresponds to four colors and five flavors~\cite{Intriligator:2006dd};  the simulation of such a theory with current algorithms will require petascale computing resources, and therefore is not anticipated for the near future.  Nevertheless, further numerical study of super QCD using lattice methods will help to develop the necessary software and analysis tools for future more realistic simulations, and will likely lead to valuable insights regarding dynamical SUSY breaking along the way to the more ambitious goal of computing the soft-breaking parameters from the underlying hidden-sector super-QCD Lagrangian.
 
 \end{itemize}
 
@@ -546,23 +544,25 @@ community.
 Lattice gauge theory simulations require parallel programming techniques, with
 the calculations running cooperatively across hundreds to many thousands of
 processors or processor cores.  The simulations must be run on hardware suitable
-for massively parallel computations. The simulations are floating point intensive;
-however, throughput is limited by memory bandwidth or by the latency and
-bandwidth of interprocessor communications. Interprocessor communications of
-data rely on message passing algorithms, typically implemented using an
-MPI~\cite{MPI} library.
+for massively parallel computations.   Although the simulations are
+floating point intensive, on all current high-performance computing systems
+throughput is limited by the rate that operands can be supplied to the
+floating point execution units, either because of memory bandwidth limitations
+or by the latency and bandwidth of interprocessor communications.
+Interprocessor communications of data rely on message-passing
+algorithms, typically implemented using an MPI~\cite{MPI} library.
 
-Several types of high performance computing hardware perform lattice QCD
-calculations.  First, commodity clusters, based on Intel or AMD x86 processors
-and Infiniband networks.  Such clusters have hundreds of nodes and thousands
-of cores.  Next, accelerated commodity clusters, similar to the the standard
-clusters but with general purpose graphics processing units (GPUs) or Intel
-many integrated core (MIC) accelerators installed in each server.  These
-clusters have fewer nodes but typically hundreds of accelerators.  Next, very
+At present, lattice theorists in the United States run their codes on a
+variety of high-performance computing hardware.  The first type is commodity clusters based on Intel or AMD x86
+processors and Infiniband networks, which have hundreds of nodes and
+thousands of cores.  A second type is accelerated commodity clusters, similar to the the
+standard clusters but with general purpose graphics processing units (GPUs) or
+Intel many integrated core (MIC) accelerators installed in each server; these
+clusters have fewer nodes but typically hundreds of accelerators.  A third type is very
 large scale Cray supercomputers, consisting of thousands of AMD x86 processors
 with a proprietary network, with the newest models also containing thousands
-of GPUs.  Finally, very large scale IBM BlueGene supercomputers, consisting
-of hundreds of thousands of PowerPC cores interconnected on a proprietary
+of GPUs.  Finally, lattice theorists use very large scale IBM BlueGene supercomputers, consisting of
+hundreds of thousands of PowerPC cores interconnected on a proprietary
 network.
 
 The Cray and IBM supercomputers provide better scaling for large
@@ -674,19 +674,25 @@ USQCD hardware resources provide essential computing capacity.
 In Table~\ref{tab:current} we list the LCF capability and dedicated
 capacity resources utilized for lattice-QCD simulations since 2010.
 The capability resources are broken out showing both the ANL and ORNL
-leadership class facilities; the capacity resources include all usage  on the 
+leadership-class facilities; the capacity resources include all usage  on the 
 DOE HEP and NP funded hardware at Fermilab, Jefferson Lab, and BNL.
 
 \begin{table}[t]
 \begin{center}
-\caption{Utilized capacity in core-hours of LCF and dedicated capacity 
-hardware for lattice-QCD simulations.   The conversion factors for lattice-QCD sustained
-Tflop/sec-years, assuming 8000 hours per year, is 1 Tflop/sec-year = 3.0M core-hour on BlueGene/Q hardware, and 1 Tflop/sec-year = 6.53M core-hour on BlueGene/P and Cray hardware.\vspace{1.5mm}}
+\caption{Utilized core-hours of leadership-class facility
+(LCF) and dedicated capacity hardware for lattice-QCD simulations.  The
+conversion factors for lattice-QCD sustained Tflop/sec-years, assuming 8000
+hours per year, is 1 Tflop/sec-year = 3.0M core-hour on BlueGene/Q hardware, and 1 Tflop/sec-year = 6.53M core-hour on
+BlueGene/P and Cray hardware. Only USQCD-Collaboration resources are shown.
+The drop in ANL LCF utilized capacity in 2012 occurred
+because fewer opportunistic core-hours (``zero-priority queues'') were
+available due to increased demand by other facility users.
+\vspace{1.5mm}}
 \label{tab:current}
 \begin{tabular}{lccc}  
 \hline\hline
 Year & ANL LCF & ORNL LCF & Dedicated Capacity Hardware \\[-0.75mm]
-& (core-hours) & (core-hours) & (core-hours) \\[0.5mm]  \hline
+& (BG/P + BG/Q core-hours) & (Cray core-hours) & (core-hours) \\[0.5mm]  \hline
 2010 & 187M & 53.6M & 125M \\
 2011 & 182M & 49.8M & 205M \\
 2012 & 143M & 77.9M & 330M \\
@@ -710,7 +716,7 @@ efficient utilization of the above computing resources requires flexible and
 effective software.  Since 2004, DOE grants to USQCD during the three
 SciDAC~\cite{SciDAC} programs (2001-2006, 2006-2011, and 2011-2016) led to the
 development of the USQCD software stack~\cite{SciDAC-software}.  This stack
-includes low level communications and I/O application program interfaces
+includes low-level communications and I/O application program interfaces
 (APIs) implemented via libraries ported to and optimized for each of the
 architectures.  The stack includes linear algebra libraries with routines that
 operate on single lattice sites, or across a full lattice with communications
@@ -801,7 +807,7 @@ field theory would have to be spread across thousands of these coprocessors
 There would be challenging communications bottlenecks between the GPU or
 other coprocessor elements, with access to non-local memory only with high
 latency and low bandwidth over the local I/O bus for neighbor elements, and
-over the high performance network for more distant coprocessors.  The Titan
+over the high-performance network for more distant coprocessors.  The Titan
 supercomputer at ORNL exemplifies this pattern.  To fully exploit
 supercomputers like Titan, new algorithms must be developed to minimize the
 penalties imposed by the communications bottlenecks.  Recently~\cite{QUDAdd}
@@ -894,7 +900,7 @@ The planned U.S. physics program over the next five years is described in detail
 in the USQCD
 whitepapers~\cite{USQCD_EF_whitepaper13,USQCD_IF_whitepaper13,USQCD_NP_whitepaper13,USQCD_Thermo_whitepaper13}.
 This physics program assumes the availability to USQCD of capability resources
-at the DOE leadership class facilities, as well as the availability of dedicated
+at the DOE leadership-class facilities, as well as the availability of dedicated
 capacity resources at Fermilab, Jefferson Lab, and BNL, deployed and operated
 under the proposed LQCD-ext~II project extension.  The sustained LQCD Tflop/sec-years provided by
 these resources by year are given in Table ~\ref{tab:fiveyear}. In all, this
@@ -907,7 +913,7 @@ storage capacity can be provided by the growth
 of the various leadership-class facilities and larger allocations on those
 supercomputers, and by the continued availability and expansion of the
 dedicated hardware for lattice field theory supported by the DOE HEP and NP
-program offices.  The anticipated evolution of high performance computing
+program offices.  The anticipated evolution of high-performance computing
 hardware will also require the evolution of software and the introduction and
 refinement of new techniques and algorithms.  DOE support for the personnel to
 invent and refine algorithms and to provide new software will also be necessary to
@@ -993,7 +999,7 @@ scale as the experiments and with commensurate uncertainties. Many of these pred
 over the next decade, and will continue to pursue the necessary supporting theoretical calculations.   Some of the highest priorities are improving calculations of hadronic matrix elements involving quark-flavor-changing transitions which are needed to interpret rare kaon decay experiments, improving calculations of the quark masses $m_c$ and $m_b$ and the strong coupling $\alpha_s$ which contribute significant parametric uncertainties to Higgs branching fractions, calculating the nucleon axial form factor which is needed to improve determinations of neutrino-nucleon cross sections relevant experiments such as LBNE, calculating the light- and strange-quark contents of nucleon which are needed to make model predictions for the $\mu \to e$ conversion rate at the Mu2e experiment (as well as to interpret dark-matter detection experiments in which
 the dark-matter particle scatters off a nucleus), and calculating the hadronic light-by-light contribution to muon $g-2$ which is needed to solidify and improve the Standard-Model prediction and interpret the upcoming measurement as a search for new physics.  Lattice field-theory calculations will also increasingly contribute to collider experiments at the LHC 14-TeV run by providing quantitative nonperturbative input for Higgs and other new-physics model building.
 
-\item The successful accomplishment of USQCD's scientific goals requires access to both capacity and capability machines, and hence support for both leadership class facilities and dedicated computing clusters.  Use of leadership-class facilities alone would provide insufficient computational resources needed to complete the planned calculations, and would be unsuitable for the mix of lattice-field-theory job requirements.   USQCD's experience and proven track-record with purchasing, deploying, utilizing, and maintaining dedicated clusters will enable the collaboration to take advantage of future improvements in commodity clusters, such as increased core counts per processor and improved memory and networking bandwidth.   USQCD's five-year computing strategy uses current vendor roadmaps to anticipate the probable evolution of high-performance computing hardware over this time period.  The purchase of new dedicated lattice hardware on an annual basis, however, provides essential flexibility to accommodate changes and developments, and thereby to purchase the most cost-effective machines for lattice-field-theory calculations.
+\item The successful accomplishment of USQCD's scientific goals requires access to both capacity and capability machines, and hence support for both leadership-class facilities and dedicated computing clusters.  Use of leadership-class facilities alone would provide insufficient computational resources needed to complete the planned calculations, and would be unsuitable for the mix of lattice-field-theory job requirements.   USQCD's experience and proven track-record with purchasing, deploying, utilizing, and maintaining dedicated clusters will enable the collaboration to take advantage of future improvements in commodity clusters, such as increased core counts per processor and improved memory and networking bandwidth.   USQCD's five-year computing strategy uses current vendor roadmaps to anticipate the probable evolution of high-performance computing hardware over this time period.  The purchase of new dedicated lattice hardware on an annual basis, however, provides essential flexibility to accommodate changes and developments, and thereby to purchase the most cost-effective machines for lattice-field-theory calculations.
 
 \item The successful utilization of future computing resources requires software that runs efficiently on new computing architectures, and hence support for postdocs and scientific staff to develop lattice-gauge-theory code.  Such positions cannot be supported by grants to lab and university theory groups alone.   The USQCD Collaboration's libraries for lattice-field-theory calculations are publicly available and are used by most of the U.S. community.  USQCD's experience and proven track-record in developing software for diverse machines such as IBM and Cray supercomputers, PC commodity clusters, and GPU-accelerated clusters, will enable the collaboration to fully exploit the computing capacity of future architectures.  
 
@@ -1909,6 +1915,13 @@ R.~Brower {\em et al.} [USQCD Collaboration],
   [arXiv:1112.2894 [hep-lat]].
   %%CITATION = ARXIV:1112.2894;%%
   %22 citations counted in INSPIRE as of 03 Aug 2013 
+  
+\bibitem{Burger:2013jya} 
+  F.~Burger {\it et al.} [ETM Collaboration],
+  %``Four-Flavour Leading Hadronic Contribution To The Muon Anomalous Magnetic Moment,''
+  arXiv:1308.4327 [hep-lat].
+  %%CITATION = ARXIV:1308.4327;%%
+  %1 citations counted in INSPIRE as of 21 Oct 2013
 
 \bibitem{Prades:2009tw} 
   J.~Prades, E.~de Rafael and A.~Vainshtein,
